// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Creation Form - Renders Correctly 1`] = `
<div
  class="view"
>
  <vue-headful-stub
    description=""
    head="[object Object]"
    title="Munro - Create League"
  />
   
  <div>
    <h1
      class="text-main text-3xl font-normal font-heading mb-2"
    >
      
      Create League
    
    </h1>
     
    <!---->
     
    <form>
      <div
        class="text-input top--4 relative"
      >
        <label
          class="font-heading text-sm text-main p-1 mx-3 bg-white relative select-none bottom--3 pb-0"
        >
          Name:
        </label>
         
        <input
          class="w-full border border-main rounded-tl-lg rounded-br-lg px-4 py-2 text-body outline-none"
          type="text"
        />
      </div>
       
      <div
        class="text-input top--4 relative"
      >
        <label
          class="font-heading text-sm text-main p-1 mx-3 bg-white relative select-none bottom--3 pb-0"
        >
          Year:
        </label>
         
        <input
          class="w-full border border-main rounded-tl-lg rounded-br-lg px-4 py-2 text-body outline-none"
          type="text"
        />
      </div>
       
      <div
        class="text-input top--4 relative"
      >
        <label
          class="font-heading text-sm text-main p-1 mx-3 bg-white relative select-none bottom--3 pb-0"
        >
          Description:
        </label>
         
        <input
          class="w-full border border-main rounded-tl-lg rounded-br-lg px-4 py-2 text-body outline-none"
          type="text"
        />
      </div>
       
      <div
        class="text-input top--4 relative"
      >
        <label
          class="font-heading text-sm text-main p-1 mx-3 bg-white relative select-none bottom--3 pb-0"
        >
          Website: (URL)
        </label>
         
        <input
          class="w-full border border-main rounded-tl-lg rounded-br-lg px-4 py-2 text-body outline-none"
          type="url"
        />
      </div>
       
      <div
        class="text-input top--4 relative"
      >
        <label
          class="font-heading text-sm text-main p-1 mx-3 bg-white relative select-none bottom--3 pb-0"
        >
          Coordinator:
        </label>
         
        <input
          class="w-full border border-main rounded-tl-lg rounded-br-lg px-4 py-2 text-body outline-none"
          type="text"
        />
      </div>
       
      <dropdown-input-stub
        label="Scoring Method:"
        list="Position Based (100 Max),Position Based (99 Max),Position Based (50 Max),Position Based (100 Max, Double Points),Position Based (50 Max, Double Points),Position Based (99 Max, Reduced in a Draw),Relative to Average Time (1000 Average),Relative to Average Time (100 Average),From Upload File"
        value=""
      />
       
      <div
        class="text-input top--4 relative appearance-none"
      >
        <label
          class="font-heading text-sm text-main p-1 mx-3 bg-white relative select-none bottom--3 pb-0"
        >
          Number of Events to Count:
        </label>
         
        <input
          class="w-full border border-main rounded-tl-lg rounded-br-lg px-4 py-2 text-body outline-none appearance-none"
          max="100"
          min="1"
          type="number"
        />
      </div>
       
      <div
        class="text-input top--4 relative"
      >
        <label
          class="font-heading text-sm text-main p-1 mx-3 bg-white relative select-none bottom--3 pb-0"
        >
          Courses: (Comma Separated)
        </label>
         
        <input
          class="w-full border border-main rounded-tl-lg rounded-br-lg px-4 py-2 text-body outline-none"
          type="text"
        />
      </div>
       
      <div
        class="checkbox-input mt-3 text-left mb-5"
      >
        <label
          class="text-md select-none font-heading text-main"
        >
          
    Dynamic Event Results:
    
          <input
            type="checkbox"
          />
           
          <span />
        </label>
      </div>
       
      <button
        class="button-lg"
      >
        Create League
      </button>
       
      <!---->
    </form>
  </div>
   
  <!---->
</div>
`;

exports[`Update Form - Renders Correctly 1`] = `
<div
  class="view"
>
  <vue-headful-stub
    description=""
    head="[object Object]"
    title="Munro - Edit League"
  />
   
  <div>
    <!---->
     
    <h1
      class="text-main text-3xl font-normal font-heading mb-2"
    >
      
      Edit League
    
    </h1>
     
    <form>
      <div
        class="text-input top--4 relative"
      >
        <label
          class="font-heading text-sm text-main p-1 mx-3 bg-white relative select-none bottom--3 pb-0"
        >
          Name:
        </label>
         
        <input
          class="w-full border border-main rounded-tl-lg rounded-br-lg px-4 py-2 text-body outline-none"
          type="text"
        />
      </div>
       
      <div
        class="text-input top--4 relative"
      >
        <label
          class="font-heading text-sm text-main p-1 mx-3 bg-white relative select-none bottom--3 pb-0"
        >
          Year:
        </label>
         
        <input
          class="w-full border border-main rounded-tl-lg rounded-br-lg px-4 py-2 text-body outline-none"
          type="text"
        />
      </div>
       
      <div
        class="text-input top--4 relative"
      >
        <label
          class="font-heading text-sm text-main p-1 mx-3 bg-white relative select-none bottom--3 pb-0"
        >
          Description:
        </label>
         
        <input
          class="w-full border border-main rounded-tl-lg rounded-br-lg px-4 py-2 text-body outline-none"
          type="text"
        />
      </div>
       
      <div
        class="text-input top--4 relative"
      >
        <label
          class="font-heading text-sm text-main p-1 mx-3 bg-white relative select-none bottom--3 pb-0"
        >
          Website: (URL)
        </label>
         
        <input
          class="w-full border border-main rounded-tl-lg rounded-br-lg px-4 py-2 text-body outline-none"
          type="url"
        />
      </div>
       
      <div
        class="text-input top--4 relative"
      >
        <label
          class="font-heading text-sm text-main p-1 mx-3 bg-white relative select-none bottom--3 pb-0"
        >
          Coordinator:
        </label>
         
        <input
          class="w-full border border-main rounded-tl-lg rounded-br-lg px-4 py-2 text-body outline-none"
          type="text"
        />
      </div>
       
      <dropdown-input-stub
        label="Scoring Method:"
        list="Position Based (100 Max),Position Based (99 Max),Position Based (50 Max),Position Based (100 Max, Double Points),Position Based (50 Max, Double Points),Position Based (99 Max, Reduced in a Draw),Relative to Average Time (1000 Average),Relative to Average Time (100 Average),From Upload File"
        value=""
      />
       
      <div
        class="text-input top--4 relative appearance-none"
      >
        <label
          class="font-heading text-sm text-main p-1 mx-3 bg-white relative select-none bottom--3 pb-0"
        >
          Number of Events to Count:
        </label>
         
        <input
          class="w-full border border-main rounded-tl-lg rounded-br-lg px-4 py-2 text-body outline-none appearance-none"
          max="100"
          min="1"
          type="number"
        />
      </div>
       
      <div
        class="text-input top--4 relative"
      >
        <label
          class="font-heading text-sm text-main p-1 mx-3 bg-white relative select-none bottom--3 pb-0"
        >
          Courses: (Comma Separated)
        </label>
         
        <input
          class="w-full border border-main rounded-tl-lg rounded-br-lg px-4 py-2 text-body outline-none"
          type="text"
        />
      </div>
       
      <div
        class="checkbox-input mt-3 text-left mb-5"
      >
        <label
          class="text-md select-none font-heading text-main"
        >
          
    Dynamic Event Results:
    
          <input
            type="checkbox"
          />
           
          <span />
        </label>
      </div>
       
      <!---->
       
      <button
        class="button-lg"
      >
        Update League
      </button>
    </form>
  </div>
   
  <!---->
</div>
`;
